--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -5,17 +5,28 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) and (min-width: 400px) {
   .topic-card-parent .topic-card {
     width: 94%;
   }
+  .topic-card-parent .topic-card-img-btn {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
-    -webkit-transform: scale(0.75);
-    transform: scale(0.75);
+    width: 230px;
+    height: 230px;
+    -webkit-transform: translateY(55px);
+            transform: translateY(55px);
     -webkit-transition: -webkit-transform 300ms ease-in;
     transition: -webkit-transform 300ms ease-in;
     transition: transform 300ms ease-in;
@@ -27,11 +38,20 @@
   .topic-card-parent .topic-card {
     width: 70.5%;
   }
+  .topic-card-parent .topic-card-img-btn {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
-    -webkit-transform: translate(20px, 0);
-    transform: translate(20px, 0);
-    -webkit-transform: scale(1);
-    transform: scale(1);
+    width: 250px;
+    height: 250px;
+    -webkit-transform: translateY(75px);
+            transform: translateY(75px);
     -webkit-transition: -webkit-transform 300ms ease-out;
     transition: -webkit-transform 300ms ease-out;
     transition: transform 300ms ease-out;
@@ -46,29 +66,45 @@
   .topic-card-parent .topic-card-img-btn {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-  .topic-card-parent .topic-card-img-btn button {
-    margin-left: 35px;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
-    margin-left: 35px;
-    -webkit-transform: scale(0.75);
-    transform: scale(0.75);
+    margin-left: 45px;
+    width: 200px;
+    height: 200px;
+    -webkit-transform: translateY(75px);
+            transform: translateY(75px);
     -webkit-transition: -webkit-transform 300ms ease-in;
     transition: -webkit-transform 300ms ease-in;
     transition: transform 300ms ease-in;
     transition: transform 300ms ease-in, -webkit-transform 300ms ease-in;
+  }
+  .topic-card-parent .topic-card-img-btn button {
+    margin-left: 30px;
+    margin-top: 40px;
   }
 }
 
 .topic-card-parent .topic-card {
   border: none !important;
   background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .topic-card-parent .topic-card .topic-card-description {
@@ -84,8 +120,8 @@
   display: -ms-flexbox;
   display: flex;
   padding-left: 2rem;
-  -ms-flex-item-align: center;
-  align-self: center;
+  -ms-flex-item-align: space-between;
+      align-self: space-between;
 }
 
 .topic-card-parent .topic-card-title h1 {
@@ -96,15 +132,14 @@
 }
 
 .topic-card-parent .topic-card-img-btn {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 32px;
+  margin-right: 85px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-left: 32px;
-  margin-right: 85px;
-  translate: 0px 30%;
 }
 
 .topic-card-parent .topic-card-img-btn button {
@@ -116,6 +151,9 @@
   height: 50px;
   font-weight: bold;
   background-color: #d1d1d1;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .topic-card-parent .topic-card-img-btn button:hover {
@@ -123,23 +161,21 @@
   -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .topic-card-parent .topic-card-img-btn .topic-card-img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 250px;
-  height: 250px;
   border-radius: 50%;
   background-color: #312626;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
 
