--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -10,7 +10,7 @@
     border: none !important;
     background-color: white;
     display: flex;
-
+    flex-direction: column;
     & .topic-card-description {
       padding-left: 2em;
       padding-right: 2em;
@@ -22,7 +22,7 @@
     margin: 0px;
     display: flex;
     padding-left: 2rem;
-    align-self: center;
+    align-self: space-between;
     & h1 {
       margin-top: 20px;
       margin-bottom: 20px;
@@ -31,12 +31,11 @@
     }
   }
   & .topic-card-img-btn {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    // margin-left: 32px;
-    // margin-right: 85px;
-    // translate: 0px 30%;
+    justify-content: space-between;
+    margin-left: 32px;
+    margin-right: 85px;
+    display: flex;
+
     & button {
       border: none;
       font-size: 15px;
@@ -46,6 +45,7 @@
       height: 50px;
       font-weight: bold;
       background-color: #d1d1d1;
+      align-self: center;
       &:hover {
         background-color: #dadada;
         transition: all 200ms ease-in-out;
@@ -54,8 +54,6 @@
     }
     & .topic-card-img {
       display: flex;
-      width: 250px;
-      height: 250px;
       border-radius: 50%;
       background-color: rgb(49, 38, 38);
       justify-content: center;
