--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -5,14 +5,12 @@
     margin-top: 30px;
   }
 }
-
 @media (min-width: 400px) {
   #desktop {
     display: block;
     margin-top: 30px;
   }
 }
-
 @media (min-width: 1001px) {
   #desktop {
     display: block;
@@ -26,13 +24,11 @@
     display: block;
   }
 }
-
 @media (min-width: 400px) {
   #mobile {
     display: none;
   }
 }
-
 @media (min-width: 1001px) {
   #mobile {
     display: none;
@@ -53,5 +49,4 @@
 
 .mobile-grandParent-btn {
   @apply bg-backdrop pb-2 pt-2 text-left text-white capitalize w-screen;
-}
-/*# sourceMappingURL=TopicBreadcrumbs.css.map */
+}/*# sourceMappingURL=TopicBreadcrumbs.css.map */
