--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -1,147 +1,91 @@
 .topic-card-parent {
   margin: 0px;
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 @media screen and (max-width: 1000px) and (min-width: 400px) {
   .topic-card-parent .topic-card {
     width: 94%;
   }
   .topic-card-parent .topic-card-img-btn {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
     width: 230px;
     height: 230px;
-    -webkit-transform: translateY(55px);
-            transform: translateY(55px);
-    -webkit-transition: -webkit-transform 300ms ease-in;
-    transition: -webkit-transform 300ms ease-in;
+    transform: translateY(55px);
     transition: transform 300ms ease-in;
-    transition: transform 300ms ease-in, -webkit-transform 300ms ease-in;
   }
 }
-
 @media screen and (min-width: 1001px) {
   .topic-card-parent .topic-card {
     width: 70.5%;
   }
   .topic-card-parent .topic-card-img-btn {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
     width: 250px;
     height: 250px;
-    -webkit-transform: translateY(75px);
-            transform: translateY(75px);
-    -webkit-transition: -webkit-transform 300ms ease-out;
-    transition: -webkit-transform 300ms ease-out;
+    transform: translateY(75px);
     transition: transform 300ms ease-out;
-    transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
   }
 }
-
 @media screen and (max-width: 399px) {
   .topic-card-parent .topic-card {
     width: 100%;
   }
   .topic-card-parent .topic-card-img-btn {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     display: flex;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
     margin-left: 45px;
     width: 200px;
     height: 200px;
-    -webkit-transform: translateY(75px);
-            transform: translateY(75px);
-    -webkit-transition: -webkit-transform 300ms ease-in;
-    transition: -webkit-transform 300ms ease-in;
+    transform: translateY(75px);
     transition: transform 300ms ease-in;
-    transition: transform 300ms ease-in, -webkit-transform 300ms ease-in;
   }
   .topic-card-parent .topic-card-img-btn button {
     margin-left: 30px;
     margin-top: 40px;
   }
 }
-
 .topic-card-parent .topic-card {
   border: none !important;
   background-color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .topic-card-parent .topic-card .topic-card-description {
   padding-left: 2em;
   padding-right: 2em;
   text-align: justify;
   border: none;
 }
-
 .topic-card-parent .topic-card-title {
   margin: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-left: 2rem;
-  -ms-flex-item-align: space-between;
-      align-self: space-between;
+  align-self: space-between;
 }
-
 .topic-card-parent .topic-card-title h1 {
   margin-top: 20px;
   margin-bottom: 20px;
   @apply text-4xl;
   @apply font-bold;
 }
-
 .topic-card-parent .topic-card-img-btn {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-left: 32px;
   margin-right: 85px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .topic-card-parent .topic-card-img-btn button {
   border: none;
   font-size: 15px;
@@ -151,36 +95,22 @@
   height: 50px;
   font-weight: bold;
   background-color: #d1d1d1;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
 }
-
 .topic-card-parent .topic-card-img-btn button:hover {
   background-color: #dadada;
-  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  transform: scale(1.05);
 }
-
 .topic-card-parent .topic-card-img-btn .topic-card-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-radius: 50%;
-  background-color: #312626;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background-color: rgb(49, 38, 38);
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
-
 .topic-card-parent .topic-card-img-btn .topic-card-img img {
   height: 100%;
   @apply object-cover;
-}
-/*# sourceMappingURL=TopicCard.css.map */
+}/*# sourceMappingURL=TopicCard.css.map */
