--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -28,8 +28,8 @@ $image-shrinkage: 0.75;
     }
 
     & .topic-card-description {
-      max-height: 350px;
-      overflow: auto;
+      overflow: hidden;
+      transition: max-height 300ms ease-in;
     }
     & .topic-card-description.expanding {
       max-height: 700px;
@@ -49,12 +49,12 @@ $image-shrinkage: 0.75;
       }
     }
     & .topic-card-description {
-      max-height: 250px;
-      overflow: auto;
+      overflow: hidden;
+      transition: all 300ms ease-in;
     }
     & .topic-card-description.expanding {
       max-height: 600px;
-      transition: max-height 300ms ease-in;
+      //transition: max-height 300ms ease-in;
     }
   }
 }
