--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -53,7 +53,7 @@
       width: 200px;
       height: 200px;
       border-radius: 50%;
-      background-color: rgb(49, 38, 38);
+      // background-color: rgb(49, 38, 38);
       justify-content: center;
       align-items: center;
       overflow: hidden;
