--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #4e4d4d;
+  overflow-x: hidden;
 }
 
 code {
