After merging main

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,7 +7,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #4e4d4d;
-  overflow-x: hidden;
 }
 
 code {
@@ -32,4 +31,4 @@ h3 {
 
 h4 {
   @apply text-xl  font-bold;
-} /*# sourceMappingURL=App.css.map *//*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
