--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -3,7 +3,7 @@ $phone-screen-width: 94%;
 $image-displacement-screen: 40%, 30%;
 $image-displacement-phone: 0%, 30%;
 $image-shrinkage: 0.75;
-ssd @mixin img-btn-phone-display {
+@mixin img-btn-phone-display {
   flex-direction: column;
   align-items: center;
   justify-content: center;
