--- a/web/src/Styling/_variables.scss
+++ b/web/src/Styling/_variables.scss
@@ -6,7 +6,8 @@ $black: #000;
 $offWhite: #e3e3e3;
 $bg-button-inactive: #323232;
 $btn-text-inactive: #a5a4a4;
-$phone-width: 400.5px;
+$phone-width: 550.5px;
+$small-phone-width: 330px;
 $desktop-width: 1000.5px;
 
 @mixin flex-row {
