--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -2,17 +2,20 @@
 @media (max-width: 400px) {
   #desktop {
     display: none;
+    margin-top: 30px;
   }
 }
 @media (min-width: 400px) {
   #desktop {
     display: block;
+    margin-top: 30px;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1001px) {
   #desktop {
     display: block;
-    margin-left: 15%;
+    margin-top: 30px;
+    margin-left: 14.6%;
   }
 }
 
@@ -26,7 +29,7 @@
     display: none;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1001px) {
   #mobile {
     display: none;
   }
