--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -1,32 +1,34 @@
-$wide-screen-width: 600px;
-$phone-screen-width: 100vh;
+$wide-screen-width: 70.5%;
+$phone-screen-width: 94%;
 $image-displacement-screen: 40%, 30%;
 $image-displacement-phone: 0%, 30%;
 $image-shrinkage: 0.75;
-
 @mixin img-btn-phone-display {
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  justify-items: space-evenly;
 }
 
 @mixin img-btn-screen-display {
   flex-direction: row;
   justify-content: space-evenly;
 }
+
 @mixin screen-size-change {
-  @media screen and (max-width: 601px) {
+  @media screen and (max-width: 1000px) and (min-width: 700px) {
     .topic-card {
       width: $phone-screen-width;
     }
     .topic-card-img-btn {
-      @include img-btn-phone-display;
+      @include img-btn-screen-display;
       & .topic-card-img {
-        transform: scale($image-shrinkage);
+        width: 230px;
+        height: 230px;
+        transform: translateY(55px);
         transition: transform 300ms ease-in;
       }
     }
-
     & .topic-card-description {
       max-height: 350px;
       overflow: auto;
@@ -36,16 +38,36 @@ $image-shrinkage: 0.75;
       transition: max-height 300ms ease-in;
     }
   }
-  @media screen and (min-width: 602px) {
+  @media screen and (min-width: 1000px) {
     .topic-card {
       width: $wide-screen-width;
     }
     .topic-card-img-btn {
       @include img-btn-screen-display;
       & .topic-card-img {
-        transform: translate(20px, 0);
-        transform: scale(1);
+        width: 250px;
+        height: 250px;
         transition: transform 300ms ease-out;
+      }
+    }
+  }
+  @media screen and (max-width: 700px) {
+    .topic-card {
+      width: 100%;
+    }
+    & .topic-card-img-btn {
+      display: flex;
+      @include img-btn-phone-display;
+
+      & .topic-card-img {
+        margin-left: 45px;
+        width: 200px;
+        height: 200px;
+      }
+
+      & button {
+        margin-left: 30px;
+        margin-bottom: 10px;
       }
     }
     & .topic-card-description {
