--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -3,7 +3,7 @@
 .topic-card-parent {
   @include screen-size-change;
   margin: 100px;
-  margin-top: px;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   & .topic-card {
