testing generating component

--- a/web/src/Styling/Generating/generatingPage.scss
+++ b/web/src/Styling/Generating/generatingPage.scss
@@ -1,12 +1,21 @@
 @import "./variables.scss";
 
 .generating {
-  margin-top: 200px;
+  margin-top: 130px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: column;
   width: 800px;
+
+  .img {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    @apply rounded-full;
+    @apply h-[400px];
+    @apply w-[400px];
+  }
 
   .title {
     @include flex-center;
@@ -14,11 +23,14 @@
   }
 
   .description {
+    text-align: center;
     @include flex-center;
+    font-size: 30px;
+    @apply w-[600px];
   }
 
   .lottie {
     margin: auto;
-    width: 200px;
+    width: 300px;
   }
 }
