--- a/web/src/Global/Header/Header.scss
+++ b/web/src/Global/Header/Header.scss
@@ -4,7 +4,7 @@ header {
   @include flex-row;
   background-color: $black;
   height: 70px;
-  width: 100%;
+  width: 100% !important;
   justify-content: space-between;
   position: fixed;
   top: 0;
