--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tilt+Warp&display=swap");
-@media (max-width: 400px) {
+@media (max-width: 449px) {
   #desktop {
     display: none;
     margin-top: 30px;
   }
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   #desktop {
     display: block;
     margin-top: 30px;
@@ -20,13 +20,13 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 449px) {
   #mobile {
     display: block;
   }
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   #mobile {
     display: none;
   }
@@ -47,10 +47,10 @@
 }
 
 .mobile-parent-btn {
-  @apply bg-backdrop2 pt-2 text-left text-white capitalize w-screen;
+  @apply bg-backdrop2 pt-2 text-left text-white pb-2 pl-[2rem] capitalize w-screen;
 }
 
 .mobile-grandParent-btn {
-  @apply bg-backdrop pt-2 text-left text-white capitalize w-screen;
+  @apply bg-backdrop pt-2 text-left text-white pl-[2rem] capitalize w-screen;
 }
 /*# sourceMappingURL=TopicBreadcrumbs.css.map */
