--- a/web/src/Styling/Homepage/Homepage.css
+++ b/web/src/Styling/Homepage/Homepage.css
@@ -11,5 +11,5 @@
   display: inline;
 }
 .groups-container .group-title {
-  color: rgb(255, 255, 255);
+  color: white;
 } /*# sourceMappingURL=Homepage.css.map */
