--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -5,14 +5,12 @@
     margin-top: 30px;
   }
 }
-
 @media (min-width: 450px) {
   #desktop {
     display: block;
     margin-top: 30px;
   }
 }
-
 @media (min-width: 1001px) {
   #desktop {
     display: block;
@@ -25,13 +23,11 @@
     display: block;
   }
 }
-
 @media (min-width: 450px) {
   #mobile {
     display: none;
   }
 }
-
 @media (min-width: 1001px) {
   #mobile {
     display: none;
@@ -52,5 +48,4 @@
 
 .mobile-grandParent-btn {
   @apply bg-backdrop pt-2 text-left text-white pl-[2rem] capitalize w-screen;
-}
-/*# sourceMappingURL=TopicBreadcrumbs.css.map */
+} /*# sourceMappingURL=TopicBreadcrumbs.css.map */
