--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -2,10 +2,9 @@
 
 .topic-card-parent {
   @include screen-size-change;
-  // margin: 0px;
-  // margin-top: 20px;
   display: flex;
   justify-content: center;
+  margin-top: 20px;
   & .topic-card {
     border: none !important;
     background-color: white;
